--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
                     <div class="signup-underline"></div>
                 </form>
             </div>
+            <div class="confirmation-page">
+                <div class="old-friends">Just Like Old Friends</div>
+            <div>
+                <div class="circle circle1"></div>
+                <div class="circle circle2"></div>
+                <div class="circle circle3"></div>
+                <div class="circle circle4"></div>
+                <div class="line line6"></div>
+                <div class="line line7"></div>
+            </div>
+            <div class="keep-updated">We'll keep you updated on any deals, news, or gossip that comes our way!</div>
+            <div class="go-shop">Go Shop!</div>
+        </div>
         </div>
     </div>
      <script src="./script.js"></script>
